--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1>YOU HAVE BEEN INVITED</h1>
     <h2>To</h2>
-    <img src="./assets/image.avif" alt="Friends Reunion Poster"/>
+    <img src="./assets/images/image2.jpg" alt="Friends Reunion Poster"/>
     <h2>On 19th May At 06:00 P.M.</h2>
     <h3>This is where you need to reach: </h3>
     <div>
