--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body>
     <h1>YOU HAVE BEEN INVITED</h1>
     <h2>To</h2>
-    <img src="./assets/images/image2.jpg" alt="Friends Reunion Poster"/>
+    <div id="fir">
+        <img src="./assets/images/image2.jpg" alt="Friends Reunion Poster"/>
+    </div>
     <h2>On 19th May At 06:00 P.M.</h2>
     <h3>This is where you need to reach: </h3>
-    <div>
+    <div id="sec">
         <a href="https://maps.app.goo.gl/WzAZFKrR34gMSv3B8">Yaha Pe Click Kar</a>
     </div>
     <h3>Paisa leke aana</h3>
