--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     </div>
     <h2>On 19th May At 06:00 P.M.</h2>
     <h3>This is where you need to reach: </h3>
-    <div id="sec">
-        <a href="https://maps.app.goo.gl/WzAZFKrR34gMSv3B8">Yaha Pe Click Kar</a>
-    </div>
+    <a href="https://maps.app.goo.gl/WzAZFKrR34gMSv3B8">Yaha Pe Click Kar</a
     <h3>Paisa leke aana</h3>
 </body>
 </html>
